@@ -259,6 +259,17 @@
         <artifactId>reproducible-build-maven-plugin</artifactId>
       </plugin>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <compilerArgs>
+            <arg>-proc:full</arg>
+            <compilerArg>-Alog4j.graalvm.groupId=com.onthegomap.planetiler</compilerArg>
+            <compilerArg>-Alog4j.graalvm.artifactId=planetiler-core</compilerArg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
         <version>0.6.1</version>
